table priviledges check

--- a/scripts/02.table_vacuum_time.md
+++ b/scripts/02.table_vacuum_time.md
@@ -3,7 +3,7 @@
 ```sql
 
 select
-	p.datname as db_name,
+    p.datname as db_name,
     p.relid::regclass AS table_name,
     p.phase,
     a.pid,
@@ -18,3 +18,7 @@ WHERE
     now() - a.query_start > interval '5 minutes';
 
 ```
+
+## Explanation
+
+ This SQL query is designed to identify and monitor long-running autovacuum processes in PostgreSQL databases. It joins the `pg_stat_progress_vacuum` view with `pg_stat_activity` to gather information about ongoing vacuum operations, including their duration and state.
