long running query check

--- a/scripts/04.long_running_connection_check.md
+++ b/scripts/04.long_running_connection_check.md
@@ -2,10 +2,27 @@
 
 ```sql
 
-SELECT pid, usename, client_addr, client_hostname, state, backend_start, query_start, state_change, wait_event, wait_event_type, query_id, query
-FROM pg_stat_activity
-WHERE datname = 'postgres'
-AND (now() - query_start) > '5 minutes'::interval;
+select
+ pid,
+ usename,
+ client_addr,
+ client_hostname,
+ state,
+ backend_start,
+ query_start,
+ state_change,
+ wait_event,
+ wait_event_type,
+ query_id,
+ query,
+ now() - query_start as duration
+from
+ pg_stat_activity
+where
+ datname = 'postgres'
+ and (now() - query_start) > '5 minutes'::interval
+order by 
+ duration desc 
 
 ```
 
